import { generateSnapshots } from '@chanzuckerberg/story-utils';
import { render, screen } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import React from 'react';
import {
  describe,
  expect,
  it,
  type Mock,
  vi,
  beforeEach,
  afterEach,
} from 'vitest';
import { Button } from './Button';

import * as stories from './Button.stories';
import type { StoryFile } from '../../../.storybook/utility-types';

describe('<Button />', () => {
  beforeEach(() => {
    // Add in mocks for the calls that can occur in implementation to suppress logging in tests
    const consoleMock = vi.spyOn(console, 'error');
    const consoleWarnMock = vi.spyOn(console, 'warn');
    consoleMock.mockImplementation(() => {});
    consoleWarnMock.mockImplementation(() => {});
  });

  afterEach(() => {
    vi.resetAllMocks();
  });

  generateSnapshots(stories as StoryFile);

  it('renders the text in the button', () => {
    render(<Button>Click</Button>);

    expect(screen.getByRole('button')).toHaveTextContent('Click');
  });

  it('fires callback on click', async () => {
    const user = userEvent.setup();
    const onClick = vi.fn();
    render(<Button onClick={onClick}>Click</Button>);

    await user.click(screen.getByRole('button'));
    expect(onClick).toHaveBeenCalled();
  });

  it('passes test ids down properly', () => {
    render(<Button data-testid="example-test-id">Click</Button>);
    expect(screen.getByTestId('example-test-id')).toMatchSnapshot();
  });

  it('passes class names down properly', () => {
    render(
      <Button className="exampleClassName" data-testid="example-class-name">
        Click
      </Button>,
    );
    expect(screen.getByTestId('example-class-name')).toMatchSnapshot();
  });

  it('forwards refs', () => {
    const ref = React.createRef<HTMLButtonElement>();
    render(<Button ref={ref}>Click</Button>);

    ref.current!.focus();

    const button = screen.getByRole('button');
    expect(button).toHaveFocus();
  });

  describe('emits messages when misused', () => {
    let consoleErrorMock: Mock, consoleWarnMock: Mock;
    beforeEach(() => {
      consoleWarnMock = vi.spyOn(console, 'warn');
      consoleErrorMock = vi.spyOn(console, 'error');
      consoleWarnMock.mockImplementation(() => {});
      consoleErrorMock.mockImplementation(() => {});
    });

    it('errors engineers when disable is used', () => {
      render(<Button disabled>Click</Button>);

      expect(consoleWarnMock).toHaveBeenCalledTimes(0);
      expect(consoleErrorMock).toHaveBeenCalledTimes(1);
    });

    it('warns when icon-only Button instances contain children', () => {
      render(
        <Button icon="add" iconLayout="icon-only">
          Click
        </Button>,
      );

      expect(consoleWarnMock).toHaveBeenCalledTimes(1);
      expect(consoleErrorMock).toHaveBeenCalledTimes(0);
    });

    it.each(['left', 'right', 'icon-only'] as const)(
      'warns when iconLayout is %s with no icon',
      (iconLayout) => {
        render(<Button aria-label="Click" iconLayout={iconLayout} />);

        expect(consoleWarnMock).toHaveBeenCalledWith(
          expect.stringContaining('no "icon" to put in it'),
        );
      },
    );

    it('stays quiet when an icon accompanies the layout', () => {
      render(
        <Button icon="add" iconLayout="left">
          Click
        </Button>,
      );

      expect(consoleWarnMock).toHaveBeenCalledTimes(0);
    });

    it('stays quiet for a button with neither', () => {
      render(<Button>Click</Button>);

      expect(consoleWarnMock).toHaveBeenCalledTimes(0);
    });
  });

  describe('the icon slot', () => {
    it('renders no icon of its own when none is given', () => {
      const warn = vi.spyOn(console, 'warn').mockImplementation(() => {});
      const { container } = render(<Button iconLayout="left">Click</Button>);
      warn.mockRestore();

      // The slot had defaulted to `add-encircled`, so a button that asked for a layout and
      // named no icon quietly grew a plus sign it never requested.
      /* eslint-disable-next-line testing-library/no-container */
      expect(container.querySelector('svg')).toBeNull();
    });
  });
});
