// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > CriticalRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-critical_0829c1 btn-primary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Primary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-critical_0829c1 btn-secondary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Secondary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-critical_0829c1 btn-tertiary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > Default story renders snapshot 1`] = `
<div
  class="p-1"
>
  <button
    class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
    type="button"
  >
    <span
      class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`<Button /> > DefaultRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 btn-primary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Primary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 btn-secondary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Secondary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 btn-tertiary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > Disabled story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 btn-primary"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Primary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 btn-secondary"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Secondary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 btn-tertiary"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > DisabledFullWidths story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--full-width_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Large
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--full-width_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-default_0829c1"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
      >
        Medium
      </span>
    </button>
    <button
      aria-label="Small button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--full-width_0829c1 _button--primary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1"
      >
        Small
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > FullWidths story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--full-width_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Large
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--full-width_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
      >
        Medium
      </span>
    </button>
    <button
      aria-label="Small button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--full-width_0829c1 _button--primary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1"
      >
        Small
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > IconLayouts story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      class="_button_0829c1 _button--layout-left_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
          />
        </svg>
        Left
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-right_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Right
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Label must be applied with icon-only layout"
      class="_button_0829c1 _button--layout-icon-only_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > IconOnlySizes story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="_button_0829c1 _button--layout-icon-only_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="_button_0829c1 _button--layout-icon-only_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Small button"
      class="_button_0829c1 _button--layout-icon-only_0829c1 _button--primary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > InverseDisabledRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1 btn-primary"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Primary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1 btn-secondary"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Secondary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1 btn-tertiary"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > InverseRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1 btn-primary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Primary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1 btn-secondary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Secondary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1 btn-tertiary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > JustDisabledProp story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 btn-primary"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Primary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 btn-secondary"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Secondary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 btn-tertiary"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > LeftIconSizes story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="_button_0829c1 _button--layout-left_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
        Large
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="_button_0829c1 _button--layout-left_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
        Medium
      </span>
    </button>
    <button
      aria-label="Small button"
      class="_button_0829c1 _button--layout-left_0829c1 _button--primary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
        Small
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > LoadingStates story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--loading_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1 _button--is-loading_0829c1"
      >
        Large
      </span>
      <div
        aria-busy="true"
        aria-label="loading"
        class="_loading-indicator_eac96c _button__loader_0829c1"
        data-testid="oval-loading"
        role="status"
      >
        <svg
          data-testid="oval-svg"
          height="16"
          stroke="transparent"
          viewBox="-22 -22 46 46"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              data-testid="oval-secondary-group"
              stroke-width="4"
              transform="translate(1 1)"
            >
              <circle
                cx="0"
                cy="0"
                r="20"
                stroke="transparent"
                stroke-opacity=".5"
                stroke-width="4"
              />
              <path
                d="M20 0c0-9.94-8.06-20-20-20"
              >
                <animatetransform
                  attributeName="transform"
                  dur="1s"
                  from="0 0 0"
                  repeatCount="indefinite"
                  to="360 0 0"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </button>
    <button
      aria-label="Medium button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--loading_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1 _button--is-loading_0829c1"
      >
        Medium
      </span>
      <div
        aria-busy="true"
        aria-label="loading"
        class="_loading-indicator_eac96c _button__loader_0829c1"
        data-testid="oval-loading"
        role="status"
      >
        <svg
          data-testid="oval-svg"
          height="16"
          stroke="transparent"
          viewBox="-22 -22 46 46"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              data-testid="oval-secondary-group"
              stroke-width="4"
              transform="translate(1 1)"
            >
              <circle
                cx="0"
                cy="0"
                r="20"
                stroke="transparent"
                stroke-opacity=".5"
                stroke-width="4"
              />
              <path
                d="M20 0c0-9.94-8.06-20-20-20"
              >
                <animatetransform
                  attributeName="transform"
                  dur="1s"
                  from="0 0 0"
                  repeatCount="indefinite"
                  to="360 0 0"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </button>
    <button
      aria-label="Small button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--loading_0829c1 _button--primary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1 _button--is-loading_0829c1"
      >
        Small
      </span>
      <div
        aria-busy="true"
        aria-label="loading"
        class="_loading-indicator_eac96c _button__loader_0829c1"
        data-testid="oval-loading"
        role="status"
      >
        <svg
          data-testid="oval-svg"
          height="16"
          stroke="transparent"
          viewBox="-22 -22 46 46"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              data-testid="oval-secondary-group"
              stroke-width="4"
              transform="translate(1 1)"
            >
              <circle
                cx="0"
                cy="0"
                r="20"
                stroke="transparent"
                stroke-opacity=".5"
                stroke-width="4"
              />
              <path
                d="M20 0c0-9.94-8.06-20-20-20"
              >
                <animatetransform
                  attributeName="transform"
                  dur="1s"
                  from="0 0 0"
                  repeatCount="indefinite"
                  to="360 0 0"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> > NeutralRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-neutral_0829c1 btn-primary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Primary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-neutral_0829c1 btn-secondary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Secondary
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-neutral_0829c1 btn-tertiary"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > RightIconSizes story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="_button_0829c1 _button--layout-right_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Large
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="_button_0829c1 _button--layout-right_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
      >
        Medium
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Small button"
      class="_button_0829c1 _button--layout-right_0829c1 _button--primary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1"
      >
        Small
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > Sizes story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Large
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
      >
        Medium
      </span>
    </button>
    <button
      aria-label="Small button"
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1"
      >
        Small
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > Tertiary story renders snapshot 1`] = `
<div
  class="p-1"
>
  <button
    class="_button_0829c1 _button--layout-left_0829c1 _button--tertiary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
    type="button"
  >
    <span
      class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8"
        fill="currentColor"
        height="16px"
        style="--icon-size: 16px;"
        viewBox="0 0 24 24"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
        />
      </svg>
      Button
    </span>
  </button>
</div>
`;

exports[`<Button /> > TertiaryStandalone story renders snapshot 1`] = `
<div
  class="p-1"
>
  <button
    class="_button_0829c1 _button--context-standalone_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
    type="button"
  >
    <span
      class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`<Button /> > UsingExtendedLink story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div>
    Lorem ipsum dolor sit amet, . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
     
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      to="test"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        consectetur adipiscing elit
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > WithFpoIconContent story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="_button_0829c1 _button--layout-left_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <span
          aria-hidden="true"
          class="fpo"
          style="height: 24px; width: 24px; font-size: 9px; line-height: 1; overflow: hidden; padding: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
        >
          FPO
        </span>
        Large
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="_button_0829c1 _button--layout-left_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
      >
        <span
          aria-hidden="true"
          class="fpo"
          style="height: 16px; width: 16px; font-size: 6px; line-height: 1; overflow: hidden; padding: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
        />
        Medium
      </span>
    </button>
    <button
      aria-label="Small button"
      class="_button_0829c1 _button--layout-left_0829c1 _button--primary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1"
      >
        <span
          aria-hidden="true"
          class="fpo"
          style="height: 16px; width: 16px; font-size: 6px; line-height: 1; overflow: hidden; padding: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
        />
        Small
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > WithFpoIconOnlyContent story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="_button_0829c1 _button--layout-icon-only_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <span
          aria-hidden="true"
          class="fpo"
          style="height: 24px; width: 24px; font-size: 9px; line-height: 1; overflow: hidden; padding: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
        >
          FPO
        </span>
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="_button_0829c1 _button--layout-icon-only_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
      >
        <span
          aria-hidden="true"
          class="fpo"
          style="height: 16px; width: 16px; font-size: 6px; line-height: 1; overflow: hidden; padding: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
        />
      </span>
    </button>
    <button
      aria-label="Small button"
      class="_button_0829c1 _button--layout-icon-only_0829c1 _button--primary_0829c1 _button--sm_0829c1 _button--size-sm_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-sm_b3eba3 _button__text_0829c1"
      >
        <span
          aria-hidden="true"
          class="fpo"
          style="height: 16px; width: 16px; font-size: 6px; line-height: 1; overflow: hidden; padding: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> > passes class names down properly 1`] = `
<button
  class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 exampleClassName"
  data-testid="example-class-name"
  type="button"
>
  <span
    class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
  >
    Click
  </span>
</button>
`;

exports[`<Button /> > passes test ids down properly 1`] = `
<button
  class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
  data-testid="example-test-id"
  type="button"
>
  <span
    class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
  >
    Click
  </span>
</button>
`;
